--- a/5/index.html
+++ b/5/index.html
@@ -10,10 +10,10 @@
     <div class="calculator">
         <h1>Калькулятор стоимости</h1>
         <div class="a">
-            <label for="kolvo">
+            <label for="kol">
                 Введите количество товара: 
             </label>
-            <input type="number" class="kol" name="kolvo" id="kol" value="">
+            <input type="number" class="kol" name="kol" id="kol" value="">
         </div>
         <div class="a">
             <label for="good">
